k8s/base/topology_spread.yaml
apiVersion: apps/v1
kind: Deployment

metadata:
  name: orders-api
  namespace: orders-prod

spec:

  template:

    spec:

      topologySpreadConstraints:

      - maxSkew: 1

        topologyKey: kubernetes.io/hostname

        whenUnsatisfiable: DoNotSchedule

        labelSelector:

          matchLabels:
            app: orders-api
