k8s/base/service.yaml
apiVersion: v1
kind: Service

metadata:
  name: orders-api
  namespace: orders-prod

spec:

  type: ClusterIP

  selector:
    app: orders-api

  ports:

  - name: http
    port: 80
    targetPort: 8080
