k8s/base/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress

metadata:
  name: orders-api
  namespace: orders-prod

  annotations:
    nginx.ingress.kubernetes.io/proxy-body-size: "10m"
    nginx.ingress.kubernetes.io/proxy-read-timeout: "60"

spec:

  ingressClassName: webapprouting.kubernetes.azure.com

  tls:

  - hosts:
    - api.example.com

    secretName: orders-api-tls

  rules:

  - host: api.example.com

    http:

      paths:

      - path: /

        pathType: Prefix

        backend:

          service:
            name: orders-api
            port:
              number: 80
